# Miniverse

./: .gitignore  ARDUINO_SETUP.md  Info from Discord.html  Info.html  PROJECT_STRUCTURE.md  README.md  SUMMARY_TH.md  TESTING.md  USAGE.md  health_check.sh  index.html  package-lock.json  package.json  start_all.sh  start_mqtt_broker.sh  test.sh
Miniverse real one/backend/: Cargo.toml
Miniverse real one/backend/src/: cli.rs  main.rs  models.rs
Miniverse real one/frontend/: package.json
Miniverse real one/mqtt_broker/: test_publish.sh  test_subscribe.sh
Miniverse real one/mqtt_broker/config/: mosquitto.conf
Project/: astro.config.mjs  package.json  tsconfig.json
Project/src/components/: home.astro  terminal.astro
Project/src/layouts/: Layout.astro
Project/src/pages/: index.astro
arduino_sketch/: miniverse_mqtt.ino
arduino_sketch/miniverse_mqtt/: miniverse_mqtt.ino
backend/: Cargo.toml
backend/src/: cli.rs  config.rs  events.rs  main.rs  models.rs  serial.rs  state.rs
backend/src/handlers/: api.rs  mod.rs  websocket.rs
backend/src/mqtt/: manager.rs  mod.rs
backend/src/serial/: bridge.rs  commands.rs  mod.rs
backend/src/websocket/: connection.rs  handler.rs
extinct-escape/: package.json
frontend/: astro.config.mjs  package.json  tailwind.config.mjs
frontend/src/client/: terminal.ts
frontend/src/components/: Terminal.astro
frontend/src/hooks/: useTerminal.ts  useWebSocket.ts
frontend/src/layouts/: BaseLayout.astro
frontend/src/lib/: utils.ts  websocket.ts
frontend/src/pages/: index.astro
(+4 files in other folders)
